force-app/main/default/objects/Agent_Tool_Definition__mdt/Agent_Tool_Definition__mdt.object-meta.xml
<CustomObject>
    <label>Agent Tool Definition</label>
    <pluralLabel>Agent Tool Definitions</pluralLabel>
</CustomObject>