force-app/main/default/objects/Agent_Tool_Definition__mdt/fields/InputSchema__c.field-meta.xml
<CustomField>
    <fullName>InputSchema__c</fullName>
    <description>JSON schema string</description>
    <inlineHelpText>JSON schema string</inlineHelpText>
    <label>Input Schema</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>