force-app/main/default/objects/Agent_Tool_Definition__mdt/fields/PromptGuidance__c.field-meta.xml
<CustomField>
    <fullName>PromptGuidance__c</fullName>
    <description>Tool-specific usage rules shown to the LLM alongside this tool&apos;s schema in the manifest, instead of bundled into the agent&apos;s system prompt.</description>
    <inlineHelpText>Tool-specific usage rules shown to the LLM next to this tool&apos;s schema.</inlineHelpText>
    <label>Prompt Guidance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>