force-app/main/default/objects/Agent_Tool_Definition__mdt/fields/Tool_Class__c.field-meta.xml
<CustomField>
    <fullName>Tool_Class__c</fullName>
    <description>Apex class name implementing interface</description>
    <inlineHelpText>Apex class name implementing interface</inlineHelpText>
    <label>Tool Class</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>